--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: sans-serif;
+    background-color: #000;
+    color: #fff;
 }
 
 header {
@@ -22,12 +24,14 @@ header {
 
 main {
     display: flex;
-    flex-direction: column;
+    flex-direction:row;
     align-items: center;
+    /* se agrega espacio entre elementos */
+    justify-content: space-around;
 }
 
 .map-container {
-    width: 100%;
+    width: 50%;
     height: 300px;
 }
 
@@ -38,11 +42,14 @@ main {
 }
 
 .trip-info {
-    width: 90%;
+    width: 40%;
     margin: 20px 0;
     padding: 15px;
-    border: 1px solid #ddd;
+    
+    
     border-radius: 5px;
+    /* Se hace el bg un poco gris */
+    background-color: rgb(17, 17, 17)
 }
 
 .trip-info h2 {
@@ -50,6 +57,7 @@ main {
 }
 
 .trip {
+    
     margin-bottom: 10px;
     padding: 10px;
     border-bottom: 1px solid #ddd;
@@ -79,7 +87,8 @@ nav {
     justify-content: space-around;
     width: 100%;
     padding: 10px;
-    background-color: #eee;
+    background-color: #000;
+    color: #fff;
 }
 
 nav a {
@@ -87,34 +96,43 @@ nav a {
     flex-direction: column;
     align-items: center;
     text-decoration: none;
-    color: #000;
+    color: #fff;
 }
 
 .icon {
-    width: 30px;
-    height: 30px;
+    min-height: 30px;
+    min-width: 30px;
+    height: fit-content;
+    width: fit-content;
     background-color: #fff;
-    border-radius: 50%;
+    /* no repetir */
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
     margin-bottom: 5px;
 }
 
 .map {
-    background-image: url(map-icon.png);
+    background-color: #000;
+    background-image: url(../images/compass.png);
     background-size: contain;
 }
 
 .deliveries {
-    background-image: url(deliveries-icon.png);
+    background-color: #000;
+    background-image: url(../images/camion.png);
     background-size: contain;
 }
 
 .reports {
-    background-image: url(reports-icon.png);
+    background-color: #000;
+    background-image: url(../images/reporte.png);
     background-size: contain;
 }
 
 .messages {
-    background-image: url(messages-icon.png);
+    background-color: #000;
+    background-image: url(../images/mensajeria.png);
     background-size: contain;
 }
 
@@ -123,4 +141,8 @@ footer {
     padding: 10px;
     background-color: #000;
     color: #fff;
+}
+
+.active {
+    color: #35d0a0;
 }
