Diseño para entregas y mapa terminados

--- a/views/conductor/mapa.html
+++ b/views/conductor/mapa.html
@@ -8,8 +8,8 @@
     <header>
         <h1>FlotillaApp</h1>
         <div>
-            <img src="../../images/user-icon.png" alt="User icon" class="user-icon">
-            <img src="../../images/notification-icon.png" alt="Notification icon" class="notification-icon">
+            <span class="solar--user-circle-bold"></span>
+            <span class="carbon--notification"></span>
         </div>
     </header>
 
